--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,10 @@
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "knex": "^0.20.13",
     "mongoose": "^5.9.6",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "sqlite3": "^4.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
