--- a/backend/package.json
+++ b/backend/package.json
@@ -4,19 +4,33 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/server.js",
+    "test": "cross-env NODE_ENV=test jest"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DanielObara/SemanaOmnistack11.git"
+  },
+  "author": "Daniel Tsutomu Obara <daniel.tsutomu@hotmail.com>",
+  "homepage": "https://github.com/DanielObara/SemanaOmnistack11#readme",
   "dependencies": {
     "axios": "^0.19.2",
     "celebrate": "^12.0.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "express": "^4.17.1",
     "knex": "^0.20.13",
-    "mongoose": "^5.9.6",
-    "socket.io": "^2.3.0",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-prettier": "^3.1.2",
+    "jest": "^25.2.4",
+    "prettier": "^2.0.2",
+    "nodemon": "^2.0.2",
+    "supertest": "^4.0.2"
   }
 }
